--- a/style.css
+++ b/style.css
@@ -38,4 +38,41 @@ body::before {
     border-radius: 12px;
     -webkit-backdrop-filter: blur(100px);
     backdrop-filter: blur(100px);
+    padding: 20px;
+}
+
+/* Input container */
+.input-container {
+    position: relative;
+}
+
+.city-input {
+    width: 100%;
+    padding: 10px 16px;
+    border-radius: 99px;
+    border: 3px solid transparent;
+    background: rgb(0, 0, 0, 0.15);
+    outline: none;
+    font-weight: 500;
+    transition: 0.25s border;
+    padding-right: 45px;
+}
+
+.city-input:focus {
+    border: 3px solid rgb(0, 0, 0, 0.15);
+}
+
+.city-input::placeholder{
+    color: rgba(255, 255, 255, 0.75);
+}
+
+.search-btn {
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    display: flex;
+    border: none;
+    cursor: pointer;
 }
