--- a/style.css
+++ b/style.css
@@ -186,3 +186,18 @@ body::before {
     width: 35px;
     height: 35px;
 }
+
+/* Search city  section message */
+.section-message{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 15px;
+    margin-top: 25%;
+}
+
+.section-message img {
+    height: 180px;
+    width: fit-content;
+}
